--- a/barcode/UI/CustomAlertView.storyboard
+++ b/barcode/UI/CustomAlertView.storyboard
@@ -18,33 +18,86 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wYe-kM-xdf">
-                                <rect key="frame" x="15" y="326" width="363" height="200"/>
+                                <rect key="frame" x="24" y="326" width="345" height="200"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="She-Ab-Ou5">
-                                        <rect key="frame" x="0.0" y="0.0" width="363" height="36"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4G6-Pa-3o3">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="145"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldJ-32-bRO" customClass="YJLabel">
+                                                <rect key="frame" x="0.0" y="0.0" width="345" height="17"/>
+                                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="TopInset">
+                                                        <real key="value" value="16"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="LeftInset">
+                                                        <real key="value" value="16"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="RightInset">
+                                                        <real key="value" value="16"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="BottomInset">
+                                                        <real key="value" value="0.0"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J1I-zS-zC3">
+                                                <rect key="frame" x="0.0" y="17" width="345" height="128"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1234567890" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4KQ-25-ox6" customClass="YJLabel">
+                                                        <rect key="frame" x="24" y="24" width="241" height="80"/>
+                                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4E-mg-kps">
+                                                        <rect key="frame" x="273" y="46" width="48" height="36"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="36" id="91o-4P-RYt"/>
+                                                            <constraint firstAttribute="width" constant="48" id="IpH-Z1-cOR"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="q4E-mg-kps" firstAttribute="centerY" secondItem="J1I-zS-zC3" secondAttribute="centerY" id="8Nt-Nz-Vxx"/>
+                                                    <constraint firstItem="q4E-mg-kps" firstAttribute="leading" secondItem="4KQ-25-ox6" secondAttribute="trailing" constant="8" id="BMy-Y7-PeN"/>
+                                                    <constraint firstAttribute="trailing" secondItem="q4E-mg-kps" secondAttribute="trailing" constant="24" id="Fhe-89-qBH"/>
+                                                    <constraint firstAttribute="bottom" secondItem="4KQ-25-ox6" secondAttribute="bottom" constant="24" id="KHF-69-HNz"/>
+                                                    <constraint firstItem="4KQ-25-ox6" firstAttribute="top" secondItem="J1I-zS-zC3" secondAttribute="top" constant="24" id="Vxh-N8-OpI"/>
+                                                    <constraint firstItem="4KQ-25-ox6" firstAttribute="leading" secondItem="J1I-zS-zC3" secondAttribute="leading" constant="24" id="nl8-SF-yq0"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="cei-8o-uLU"/>
+                                            <constraint firstItem="J1I-zS-zC3" firstAttribute="leading" secondItem="4G6-Pa-3o3" secondAttribute="leading" id="HU0-JJ-r6I"/>
+                                            <constraint firstAttribute="bottom" secondItem="J1I-zS-zC3" secondAttribute="bottom" id="i0f-og-Goa"/>
+                                            <constraint firstItem="J1I-zS-zC3" firstAttribute="top" secondItem="ldJ-32-bRO" secondAttribute="bottom" id="iLx-7O-W72"/>
+                                            <constraint firstAttribute="trailing" secondItem="J1I-zS-zC3" secondAttribute="trailing" id="yW5-GB-cad"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="She-Ab-Ou5" firstAttribute="leading" secondItem="wYe-kM-xdf" secondAttribute="leading" id="33m-Kb-I5u"/>
-                                    <constraint firstItem="She-Ab-Ou5" firstAttribute="top" secondItem="wYe-kM-xdf" secondAttribute="top" id="DMT-qB-9bS"/>
-                                    <constraint firstAttribute="trailing" secondItem="She-Ab-Ou5" secondAttribute="trailing" id="Iad-9I-6S7"/>
+                                    <constraint firstItem="4G6-Pa-3o3" firstAttribute="top" secondItem="wYe-kM-xdf" secondAttribute="top" id="0Z7-Jz-Cvb"/>
                                     <constraint firstAttribute="height" constant="200" id="TAy-k2-hod"/>
+                                    <constraint firstAttribute="trailing" secondItem="4G6-Pa-3o3" secondAttribute="trailing" id="X77-cx-y56"/>
+                                    <constraint firstItem="4G6-Pa-3o3" firstAttribute="leading" secondItem="wYe-kM-xdf" secondAttribute="leading" id="nFW-oj-LXn"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
                         <constraints>
                             <constraint firstItem="wYe-kM-xdf" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="CPs-nO-qQ4"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wYe-kM-xdf" secondAttribute="trailing" constant="15" id="akq-HJ-h1l"/>
-                            <constraint firstItem="wYe-kM-xdf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="nrp-F3-0ko"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wYe-kM-xdf" secondAttribute="trailing" constant="24" id="akq-HJ-h1l"/>
+                            <constraint firstItem="wYe-kM-xdf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="nrp-F3-0ko"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -53,9 +106,26 @@
             <point key="canvasLocation" x="65" y="-34"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="4KQ-25-ox6">
+            <size key="intrinsicContentSize" width="110.33333333333333" height="23"/>
+        </designable>
+        <designable name="ldJ-32-bRO">
+            <size key="intrinsicContentSize" width="24.333333333333332" height="17"/>
+        </designable>
+    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
