이미지스캔

--- a/barcode/ViewController/ImgScanViewController.xib
+++ b/barcode/ViewController/ImgScanViewController.xib
@@ -11,6 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImgScanViewController">
             <connections>
+                <outlet property="imgBarcode" destination="ZHS-3u-xol" id="Ybo-lH-uLA"/>
+                <outlet property="layoutResult" destination="kLD-Xg-ebr" id="18c-mk-ItU"/>
+                <outlet property="lbBarcode" destination="m2h-r5-220" id="qZi-n6-uMc"/>
+                <outlet property="lbFilename" destination="Qi8-bT-mcF" id="zwE-8L-K6p"/>
                 <outlet property="view" destination="iN0-l3-epB" id="nWL-4D-b2Y"/>
             </connections>
         </placeholder>
@@ -18,14 +22,143 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A94-fw-2In" customClass="YJView">
+                    <rect key="frame" x="69.666666666666686" y="101" width="254" height="42"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qi8-bT-mcF" customClass="YJLabel">
+                            <rect key="frame" x="8" y="0.0" width="200" height="42"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="42" id="bV2-s3-Vge"/>
+                                <constraint firstAttribute="width" constant="200" id="gIa-KX-D39"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1L-1i-PTf" customClass="YJImgButton">
+                            <rect key="frame" x="212" y="0.0" width="42" height="42"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="42" id="4Xw-Tn-fwS"/>
+                                <constraint firstAttribute="width" constant="42" id="7gV-dC-n97"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="image" keyPath="Image" value="ic_search"/>
+                                <userDefinedRuntimeAttribute type="number" keyPath="Padding">
+                                    <real key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="Radius">
+                                    <real key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="BorderWidth">
+                                    <real key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="IsTopRightRadius" value="YES"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="IsBottomRightRadius" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="onImagePicker:" destination="-1" eventType="touchUpInside" id="vVS-mB-q5i"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="H1L-1i-PTf" secondAttribute="trailing" id="EeM-dC-8OL"/>
+                        <constraint firstItem="Qi8-bT-mcF" firstAttribute="top" secondItem="A94-fw-2In" secondAttribute="top" id="Ijs-Ba-B3R"/>
+                        <constraint firstAttribute="bottom" secondItem="Qi8-bT-mcF" secondAttribute="bottom" id="iXe-Kt-vaU"/>
+                        <constraint firstItem="H1L-1i-PTf" firstAttribute="centerY" secondItem="A94-fw-2In" secondAttribute="centerY" id="kO4-yb-SKu"/>
+                        <constraint firstItem="H1L-1i-PTf" firstAttribute="leading" secondItem="Qi8-bT-mcF" secondAttribute="trailing" constant="4" id="p13-nH-rjG"/>
+                        <constraint firstItem="Qi8-bT-mcF" firstAttribute="leading" secondItem="A94-fw-2In" secondAttribute="leading" constant="8" id="rK6-5Y-LhI"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="IsAllRadius" value="YES"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="Radius">
+                            <real key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="BorderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLD-Xg-ebr">
+                    <rect key="frame" x="168.66666666666666" y="167" width="56" height="36"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m2h-r5-220" customClass="YJLabel">
+                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="ogm-2g-AFW"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="LeftInset">
+                                    <real key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="RightInset">
+                                    <real key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="BottomWidth">
+                                    <real key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I1L-Wx-VY8" customClass="YJButton">
+                            <rect key="frame" x="8" y="0.0" width="48" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="36" id="Xfc-5C-izi"/>
+                                <constraint firstAttribute="width" constant="48" id="jNo-Gf-mt3"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="복사"/>
+                            <connections>
+                                <action selector="onCopyClicked:" destination="-1" eventType="touchUpInside" id="lMB-uB-Fij"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="I1L-Wx-VY8" firstAttribute="leading" secondItem="m2h-r5-220" secondAttribute="trailing" constant="8" id="4xj-sv-20b"/>
+                        <constraint firstAttribute="trailing" secondItem="I1L-Wx-VY8" secondAttribute="trailing" id="QJd-A7-lxr"/>
+                        <constraint firstItem="m2h-r5-220" firstAttribute="leading" secondItem="kLD-Xg-ebr" secondAttribute="leading" id="UX7-DU-eSs"/>
+                        <constraint firstItem="m2h-r5-220" firstAttribute="top" secondItem="kLD-Xg-ebr" secondAttribute="top" id="kUI-ic-l8O"/>
+                        <constraint firstItem="I1L-Wx-VY8" firstAttribute="centerY" secondItem="kLD-Xg-ebr" secondAttribute="centerY" id="rBP-tj-glY"/>
+                        <constraint firstAttribute="bottom" secondItem="m2h-r5-220" secondAttribute="bottom" id="ryp-FR-N43"/>
+                    </constraints>
+                </view>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_image" translatesAutoresizingMaskIntoConstraints="NO" id="ZHS-3u-xol">
+                    <rect key="frame" x="121.66666666666669" y="351" width="150" height="150"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="150" id="HVh-tJ-9QC"/>
+                        <constraint firstAttribute="height" constant="150" id="eUw-hw-FFL"/>
+                    </constraints>
+                </imageView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemYellowColor"/>
+            <constraints>
+                <constraint firstItem="A94-fw-2In" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="38G-PG-mDL"/>
+                <constraint firstItem="kLD-Xg-ebr" firstAttribute="top" secondItem="A94-fw-2In" secondAttribute="bottom" constant="24" id="97k-w3-7Ky"/>
+                <constraint firstItem="kLD-Xg-ebr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="ESV-2d-Xv4"/>
+                <constraint firstItem="A94-fw-2In" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="42" id="FqK-h1-3nV"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kLD-Xg-ebr" secondAttribute="trailing" constant="16" id="VfO-5d-wZg"/>
+                <constraint firstItem="ZHS-3u-xol" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="axb-cc-Co3"/>
+                <constraint firstItem="kLD-Xg-ebr" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="b8h-QS-pVB"/>
+                <constraint firstItem="ZHS-3u-xol" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="zuT-lX-oWW"/>
+            </constraints>
             <point key="canvasLocation" x="48" y="-11"/>
         </view>
     </objects>
+    <designables>
+        <designable name="Qi8-bT-mcF"/>
+        <designable name="m2h-r5-220"/>
+    </designables>
     <resources>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="ic_search" width="64" height="64"/>
+        <image name="no_image" width="256" height="256"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
