--- a/barcode/ViewController/ImgScanViewController.xib
+++ b/barcode/ViewController/ImgScanViewController.xib
@@ -81,7 +81,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLD-Xg-ebr">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLD-Xg-ebr">
                     <rect key="frame" x="168.66666666666666" y="167" width="56" height="36"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m2h-r5-220" customClass="YJLabel">
@@ -129,10 +129,10 @@
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_image" translatesAutoresizingMaskIntoConstraints="NO" id="ZHS-3u-xol">
-                    <rect key="frame" x="121.66666666666669" y="351" width="150" height="150"/>
+                    <rect key="frame" x="96.666666666666686" y="249" width="200" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="150" id="HVh-tJ-9QC"/>
-                        <constraint firstAttribute="height" constant="150" id="eUw-hw-FFL"/>
+                        <constraint firstAttribute="width" constant="200" id="HVh-tJ-9QC"/>
+                        <constraint firstAttribute="height" constant="200" id="eUw-hw-FFL"/>
                     </constraints>
                 </imageView>
             </subviews>
@@ -143,9 +143,9 @@
                 <constraint firstItem="kLD-Xg-ebr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="ESV-2d-Xv4"/>
                 <constraint firstItem="A94-fw-2In" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="42" id="FqK-h1-3nV"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kLD-Xg-ebr" secondAttribute="trailing" constant="16" id="VfO-5d-wZg"/>
+                <constraint firstItem="ZHS-3u-xol" firstAttribute="top" secondItem="kLD-Xg-ebr" secondAttribute="bottom" constant="46" id="Vhr-1u-xBm"/>
                 <constraint firstItem="ZHS-3u-xol" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="axb-cc-Co3"/>
                 <constraint firstItem="kLD-Xg-ebr" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="b8h-QS-pVB"/>
-                <constraint firstItem="ZHS-3u-xol" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="zuT-lX-oWW"/>
             </constraints>
             <point key="canvasLocation" x="48" y="-11"/>
         </view>
