--- a/barcode/ViewController/HistoryViewController.xib
+++ b/barcode/ViewController/HistoryViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HistoryViewController">
             <connections>
+                <outlet property="tblHistory" destination="8LQ-uy-7M7" id="v9z-rZ-9vT"/>
                 <outlet property="view" destination="iN0-l3-epB" id="EmF-RB-8VS"/>
             </connections>
         </placeholder>
@@ -18,14 +19,25 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8LQ-uy-7M7" customClass="YJTableView">
+                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemGreenColor"/>
+            <constraints>
+                <constraint firstItem="8LQ-uy-7M7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="8wu-qI-Nvx"/>
+                <constraint firstItem="8LQ-uy-7M7" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="GfP-cR-Ed2"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="8LQ-uy-7M7" secondAttribute="bottom" id="LpD-xg-f6F"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8LQ-uy-7M7" secondAttribute="trailing" id="pqZ-DC-gv7"/>
+            </constraints>
             <point key="canvasLocation" x="48" y="-12"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
