--- a/barcode/ViewController/HistoryTableViewCell.xib
+++ b/barcode/ViewController/HistoryTableViewCell.xib
@@ -38,6 +38,9 @@
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="복사"/>
+                        <connections>
+                            <action selector="onCopyClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="JaK-oz-cML"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
